fix: preventing dark mode on login page

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -825,7 +825,10 @@ a.input-group-text.icon.add.active {
 }
 
 & when (@dark-mode-enabled = true) {
-    @import "dark";
+    html:not(.login-page) {
+        @import "dark";
+    }
+    // @import "dark";
 }
 
 @import (optional) "_styles";
